# vtc

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: examples.rs  lib.rs  main.rs  pipeline.rs
crates/cli/tests/: cli.rs  version.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: bench.rs  emit_c.rs  lib.rs
crates/codegen/tests/: codegen.rs
crates/interp/: Cargo.toml
crates/interp/src/: eval.rs  eval_f64.rs  lib.rs  tensor.rs  tensor_f64.rs
crates/interp/tests/: eval.rs  eval_f64.rs
crates/ir/: Cargo.toml
crates/ir/src/: builder.rs  data.rs  dtype.rs  error.rs  graph.rs  infer.rs  lib.rs  op.rs  shape.rs  tensor_type.rs
crates/ir/tests/: infer.rs  ir.rs
crates/loopir/: Cargo.toml
crates/loopir/src/: interp_loops.rs  interp_loops_f64.rs  lib.rs  loop_ir.rs  lower.rs
crates/loopir/tests/: eval_loops_f64.rs  lower.rs
crates/rewrite/: Cargo.toml
crates/rewrite/src/: driver.rs  egg_lang.rs  egg_search.rs  gen.rs  lib.rs  rule.rs  rules.rs  ruleset.rs  safety.rs  surgery.rs
crates/rewrite/tests/: bitexact.rs  diff.rs  driver.rs  egg.rs  rewrites.rs  safety.rs
crates/schedule/: Cargo.toml
crates/schedule/src/: autotune.rs  cost.rs  deps.rs  fuse.rs  interchange.rs  lib.rs  mode.rs  primitives.rs  tile.rs
crates/schedule/tests/: autotune.rs  bitpreserve.rs  interchange.rs  tile_fuse.rs
proofs/: README.md  VtcProofs.lean  lake-manifest.json  lakefile.lean
proofs/VtcProofs/: Laws.lean  Rewrites.lean  Tensor.lean
