[workspace]
members = [
    "crates/codegen",
    "crates/cli",
    "crates/interp",
    "crates/ir",
    "crates/loopir",
    "crates/rewrite",
    "crates/schedule",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.96"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
proptest = "1.6"
thiserror = "2"

[workspace.lints.rust]
missing_docs = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
