[package]
name = "vtc-interp"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
thiserror.workspace = true
vtc-ir = { path = "../ir" }

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
