[package]
name = "vtc-schedule"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
rand = "0.8"
thiserror.workspace = true
vtc-interp = { path = "../interp" }
vtc-ir = { path = "../ir" }
vtc-loopir = { path = "../loopir" }

[dev-dependencies]
vtc-rewrite = { path = "../rewrite" }

[lints]
workspace = true
